--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -314,8 +314,8 @@
     </div>
     <div class="c-bg-heading">Search Radius Settings</div>
     <div class="r-a-c-p" style="position: relative">
-      <div class="r-a-c-p-left">
-        <div class="f-con" style="width: 93%">
+      <div class="r-a-c-p-left" style="column-gap: 0">
+        <div class="f-con" style="width: 87%">
           <label class="f-heading" style="width: 45%; padding-right: 10px"
             >Pickup Search Centre Point
           </label>
@@ -374,7 +374,7 @@
             />
           </div>
         </div>
-        <div class="f-con" style="width: 93%">
+        <div class="f-con" style="width: 87%">
           <label class="f-heading" style="width: 45%; padding-right: 10px"
             >Destination Search Center Point</label
           >
@@ -648,7 +648,7 @@
             fill="#636364"
           />
         </svg>
-        Important Message:</span
+        Important Note:</span
       >
       <p
         style="
