--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -277,10 +277,10 @@
       <p
         style="
           display: flex;
-          align-items: center;
           gap: 5px;
           font-size: 14px;
           color: black;
+          align-items: start;
         "
       >
         <span
@@ -292,6 +292,7 @@
             gap: 5px;
             font-size: 14px;
             font-family: 'DM Sans';
+            white-space: nowrap;
           "
           ><img src="../../../assets/info-icon.png" /> Important Note:</span
         >
