--- a/src/app/screens/interaction-flow/interaction-flow.component.css
+++ b/src/app/screens/interaction-flow/interaction-flow.component.css
@@ -17,7 +17,7 @@
 
 .chat-container {
     max-width: 600px;
-    min-width: 390px;
+    /* min-width: 390px; */
     margin: 20px auto;
     border: 1px solid #e0e0e0;
     border-radius: 16px;
@@ -25,8 +25,8 @@
     padding-right: 25px; /* Added padding for scrollbar */
     height: 80vh;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: column; 
+    justify-content: flex-start;
     background: url('../../../assets/wa-bg.png');
     box-shadow: inset 0 1px 6px rgb(167 167 167 / 69%);
     overflow-y: auto;
