--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -1342,7 +1342,11 @@
               [cornersSquareOptions]="{ type: eyeExternal, color: eyeColor }"
               [cornersDotOptions]="{ type: eyeInternal, color: eyeColor }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{ color: bgColor }"
               [qrOptions]="{
                 typeNumber: typeNum,
@@ -1367,7 +1371,11 @@
               [cornersSquareOptions]="{ type: eyeExternal, color: eyeColor }"
               [cornersDotOptions]="{ type: eyeInternal, color: eyeColor }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{
                 gradient: {
                   type: 'linear',
@@ -1421,7 +1429,11 @@
                 }
               }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{ color: bgColor }"
               [qrOptions]="{
                 typeNumber: typeNum,
@@ -1466,7 +1478,11 @@
                 }
               }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{
                 gradient: {
                   type: 'linear',
@@ -1509,7 +1525,11 @@
               [cornersSquareOptions]="{ type: eyeExternal, color: eyeColor }"
               [cornersDotOptions]="{ type: eyeInternal, color: eyeColor }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{ color: bgColor }"
               [qrOptions]="{
                 typeNumber: typeNum,
@@ -1544,7 +1564,11 @@
               [cornersSquareOptions]="{ type: eyeExternal, color: eyeColor }"
               [cornersDotOptions]="{ type: eyeInternal, color: eyeColor }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{
                 gradient: {
                   type: 'linear',
@@ -1608,7 +1632,11 @@
                 }
               }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{ color: bgColor }"
               [qrOptions]="{
                 typeNumber: typeNum,
@@ -1663,7 +1691,11 @@
                 }
               }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{
                 gradient: {
                   type: 'linear',
@@ -3026,7 +3058,11 @@
               [cornersSquareOptions]="{ type: eyeExternal, color: eyeColor }"
               [cornersDotOptions]="{ type: eyeInternal, color: eyeColor }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{ color: bgColor }"
               [qrOptions]="{
                 typeNumber: typeNum,
@@ -3051,7 +3087,11 @@
               [cornersSquareOptions]="{ type: eyeExternal, color: eyeColor }"
               [cornersDotOptions]="{ type: eyeInternal, color: eyeColor }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{
                 gradient: {
                   type: 'linear',
@@ -3105,7 +3145,11 @@
                 }
               }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{ color: bgColor }"
               [qrOptions]="{
                 typeNumber: typeNum,
@@ -3150,7 +3194,11 @@
                 }
               }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{
                 gradient: {
                   type: 'linear',
@@ -3193,7 +3241,11 @@
               [cornersSquareOptions]="{ type: eyeExternal, color: eyeColor }"
               [cornersDotOptions]="{ type: eyeInternal, color: eyeColor }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{ color: bgColor }"
               [qrOptions]="{
                 typeNumber: typeNum,
@@ -3228,7 +3280,11 @@
               [cornersSquareOptions]="{ type: eyeExternal, color: eyeColor }"
               [cornersDotOptions]="{ type: eyeInternal, color: eyeColor }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{
                 gradient: {
                   type: 'linear',
@@ -3292,7 +3348,11 @@
                 }
               }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{ color: bgColor }"
               [qrOptions]="{
                 typeNumber: typeNum,
@@ -3347,7 +3407,11 @@
                 }
               }"
               [image]="logoDataUrl"
-              [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+              [imageOptions]="{
+                crossOrigin: 'anonymous',
+                margin: 10,
+                imageSize: 0.2
+              }"
               [backgroundOptions]="{
                 gradient: {
                   type: 'linear',
@@ -3429,13 +3493,19 @@
 
   <div class="nav">
     <button
-      (click)="setActive('universal'); updateFilteredQrCodes()"
+      (click)="
+        setActive('universal');
+        updateFilteredQrCodes();
+        selectedItemIndex = null
+      "
       [class.active]="activeButton === 'universal'"
     >
       Universal QR
     </button>
     <button
-      (click)="setActive('smart'); updateFilteredQrCodes()"
+      (click)="
+        setActive('smart'); updateFilteredQrCodes(); selectedItemIndex = null
+      "
       [class.active]="activeButton === 'smart'"
     >
       Smart Locations QR
@@ -3698,7 +3768,7 @@
 
   <!-- Content for Smart Locations QR -->
   <div *ngIf="activeButton === 'smart'">
-    <h2 class="qr-sec">
+    <!-- <h2 class="qr-sec">
       <img height="15px" width="15px" src="../../../assets/info-icon.png" /> Set
       Up Your Smart Location QR
     </h2>
@@ -3724,7 +3794,7 @@
       <button>
         <img src="../../../assets/close-icon.png" />
       </button>
-    </div>
+    </div> -->
     <div style="width: 100%">
       <div *ngIf="showUniversalQrGenerator" class="main">
         <div class="main-left">
@@ -4102,7 +4172,7 @@
             </div>
           </div> -->
           <div>{{ item.createdAt | date : "MM/dd/yyyy, h:mm:ss a" }}</div>
-          <div title="{{ item.name }}">{{ item.name }}</div>
+          <div title="{{ item.title }}">{{ item.title }}</div>
           <div title="{{ item.text }}">
             {{ item.text }}
           </div>
@@ -4191,7 +4261,7 @@
                 </div>
                 <img
                   *ngIf="!qrDetailImgLoader"
-                  [src]="allQrCodes[i].qrCodeImage"
+                  [src]="activeQrDetails?.recordWithoutPublicId[0].qrCodeImage"
                 />
               </div>
               <div class="item-detail-l-2">
@@ -4230,7 +4300,9 @@
                   <div style="display: flex; gap: 15px">
                     <p style="white-space: nowrap">
                       <span>Created: </span
-                      >{{ allQrCodes[i].createdAt | date : "MMM d, y, h:mm a" }}
+                      >{{
+                        filteredQrCodes[i].createdAt | date : "MMM d, y, h:mm a"
+                      }}
                     </p>
                     <div
                       style="display: flex; align-items: center; gap: 5px"
@@ -4248,14 +4320,16 @@
                             box-shadow: 0 0 10px lightgray;
                           "
                         >
-                          {{ allQrCodes[i].url }}
+                          {{ activeQrDetails?.recordWithoutPublicId[0].url }}
                         </p></span
                       >
                     </div>
                   </div>
                   <div class="r-1-1-1" *ngIf="item.type == 'text'">
                     <span
-                      ><p>{{ allQrCodes[i].url }}</p></span
+                      ><p>
+                        {{ activeQrDetails?.recordWithoutPublicId[0].url }}
+                      </p></span
                     >
                     <button class="r-1-1-1-copy" (click)="copyToClipboard()">
                       <svg
