--- a/src/app/screens/qr-stats/qr-stats.component.html
+++ b/src/app/screens/qr-stats/qr-stats.component.html
@@ -11,7 +11,7 @@
             width: fit-content;
           "
         >
-          {{ qrId
+          {{ qrURL
           }}<img
             style="width: 15px; height: 15px; cursor: pointer"
             (click)="copyToClipboard(qrId)"
