--- a/src/app/screens/app-settings/app-settings.component.html
+++ b/src/app/screens/app-settings/app-settings.component.html
@@ -192,7 +192,7 @@
           <img src="../../../assets/profile-settings.png" alt="" />
         </div>
       </div>
-      <div
+      <!-- <div
         class="imp-banner"
         style="
           display: flex;
@@ -228,7 +228,7 @@
           send this Message type by SMS. Device sending is limited to avoid bans
           , these limits are gradually reduced to mitigate that risk.
         </p>
-      </div>
+      </div> -->
     </ng-container>
   </div>
 </div>
