--- a/src/app/screens/bot-settings/bot-settings.component.css
+++ b/src/app/screens/bot-settings/bot-settings.component.css
@@ -160,10 +160,9 @@ input[type="number"] {
 
 .r-a-c-p-left {
   flex: 1;
-  display: grid;
-  grid-template-columns: 0.6fr 0.4fr;
-  column-gap: 5rem;
-  row-gap: 1.5rem;
+  gap: 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 .r-a-c-p-field {
@@ -736,10 +735,9 @@ input[type="number"] {
 
 .saa {
   display: flex;
-  flex-direction: column;
   gap: 30px;
   position: relative;
-  padding-right: 100px;
+  align-items: end;
 }
 
 .saa div {
@@ -747,6 +745,7 @@ input[type="number"] {
   justify-content: space-between;
   align-items: center;
   gap: 4px;
+  width: 100%;
 }
 
 .saa div p {
@@ -761,6 +760,7 @@ input[type="number"] {
   letter-spacing: -0.36px;
   white-space: nowrap;
   margin-bottom: 0;
+  width: 100px;
 }
 
 .saa div input {
@@ -771,16 +771,14 @@ input[type="number"] {
   line-height: normal;
   border-radius: 9px;
   border: 1px solid #e5e5ed;
-  width: 90%;
+  width: 100%;
 }
 
 .saa .btn-con {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
   display: flex;
   flex-direction: row;
   gap: 10px;
+  width: fit-content;
 }
 
 .saa .btn-con button {
