--- a/src/app/screens/qr-page/qr-page.component.css
+++ b/src/app/screens/qr-page/qr-page.component.css
@@ -859,7 +859,7 @@ h2 {
   display: flex;
   height: 52px;
   width: 50%;
-  padding: 13.015px 19.522px;
+  padding: 13.015px 0px;
   justify-content: center;
   align-items: center;
   gap: 6.507px;
@@ -1277,7 +1277,7 @@ h2 {
 }
 
 .cus-modal-3-qr {
-  width: 250px !important;
+  min-width: 250px !important;
 }
 
 .cus-modal-3-settings {
